cursive-bootstrap/tests/ui/E-SYS/E-SYS-3352.cursive
// RUN: compile-fail
// DIAG: E-SYS-3352
// SPEC: 8.12
// DESC: Unsupported extern ABI string

extern "invalid_abi" {  //~ ERROR E-SYS-3352: unsupported ABI
    procedure foreign_func() -> i32
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
